--- a/public/gcintranet/samples/sectionmenu-en.html
+++ b/public/gcintranet/samples/sectionmenu-en.html
@@ -60,7 +60,97 @@
     </script>
     <div class="container">
         <div class="row">
-            <main property="mainContentOfPage" typeof="WebPageElement" class="col-md-9 col-md-push-3">
+            <nav class="wb-sec col-md-3" typeof="SiteNavigationElement" id="wb-sec">
+                <!-- Write closure fall-back static file -->
+                <!-- secMenu-en.html -->
+            </nav>
+            <!-- Write closure template -->
+            <script>
+                var secondarymenu = document.getElementById("wb-sec");
+                secondarymenu.innerHTML = wet.builder.secmenu({
+                    "sections": [{
+                        "sectionName": "[Topic - Local navigation]",
+                        "menuLinks": [{
+                            "href": "#",
+                            "text": "Link 1",
+                            "subLinks": [{
+                                "subhref": "#11a",
+                                "subtext": "Link 1.1 a)"
+                            }, {
+                                "subhref": "#11b",
+                                "subtext": "Link 1.1 b)"
+                            }, {
+                                "subhref": "#11c",
+                                "subtext": "Opens in a new window",
+                                "newWindow": true
+                            }, {
+                                "subhref": "#11d",
+                                "subtext": "Link 1.1 d)"
+                            }]
+                        }, {
+                            "href": "#",
+                            "text": "Link 2"
+                        }, {
+                            "href": "#",
+                            "text": "Opens in a new window",
+                            "newWindow": true
+                        }, {
+                            "href": "#",
+                            "text": "Link 4"
+                        }]
+                    }, {
+                        "sectionName": "Opens in a new window",
+                        "sectionLink": "#",
+                        "newWindow": true,
+                        "menuLinks": [{
+                            "href": "#",
+                            "text": "Link 1"
+                        }, {
+                            "href": "#",
+                            "text": "Link 2"
+                        }, {
+                            "href": "#",
+                            "text": "Link 3"
+                        }, {
+                            "href": "#",
+                            "text": "Link 4"
+                        }]
+                    }, {
+                        // Rinse and repeat
+                        "sectionName": "Section name 3",
+                        "menuLinks": [{
+                            "href": "#",
+                            "text": "Link 1"
+                        }, {
+                            "href": "#",
+                            "text": "Link 2"
+                        }, {
+                            "href": "#",
+                            "text": "Link 3"
+                        }, {
+                            "href": "#",
+                            "text": "Link 4"
+                        }]
+                    }, {
+                        // Rinse and repeat
+                        "sectionName": "Section name ... 27",
+                        "menuLinks": [{
+                            "href": "#",
+                            "text": "Link 1"
+                        }, {
+                            "href": "#",
+                            "text": "Link 2"
+                        }, {
+                            "href": "#",
+                            "text": "Link 3"
+                        }, {
+                            "href": "#",
+                            "text": "Link 4"
+                        }]
+                    }]
+                });
+            </script>
+            <main property="mainContentOfPage" typeof="WebPageElement" class="col-md-9">
                 <h1 property="name" id="wb-cont">Section menu</h1>
                 <p>This sample page demonstrates how the section (left) menu is displayed and configured.</p>
                 <h2>Implementation</h2>
@@ -73,15 +163,14 @@ defTop.outerHTML = wet.builder.top({
 ...
 });
                     </pre>
-                <p>Add two unclosed <code>&lt;div&gt;</code> after the code above and immediately before the opening
-                    <code>&lt;main&gt;</code> element.
+                <p>Add two unclosed <code>&lt;div&gt;</code> after the code above.
                 <ul>
                     <li>The first <code>&lt;div&gt;</code> must have a class named "container"</li>
                     <li>The second <code>&lt;div&gt;</code> must have a class named "row"</li>
                 </ul>
-                <p>After closing the <code>&lt;main&gt;</code> element, you will need to add a <code>&lt;nav&gt;</code>
+                <p>You will need to add a <code>&lt;nav&gt;</code>
                     element which should contain your static fallback code.</p>
-                <p>After that will come the actual section menu. There are a few configuration options.</p>
+                <p>After that will come the actual section menu, before the opening <code>&lt;main&gt;</code> element. There are a few configuration options.</p>
                 <ul>
                     <li><code class="wb-prettify">"sectionName"</code>: This will be used to display the heading(s) of
                         the section menu(s).</li>
@@ -89,8 +178,8 @@ defTop.outerHTML = wet.builder.top({
                         menu.</li>
                     <pre>
 "menuLinks": [{
-	"href": "#",
-	"text": "Link 1"
+    "href": "#",
+    "text": "Link 1"
 }
                         </pre>
                     <li><code class="wb-prettify">"subLinks"</code>: This will be used for display the links in the
@@ -98,13 +187,13 @@ defTop.outerHTML = wet.builder.top({
                         window. </li>
                     <pre>
 "subLinks": [{
-	"subhref": "#",
-	"subtext": "Link 1",
-	"newWindow": true
+    "subhref": "#",
+    "subtext": "Link 1",
+    "newWindow": true
 }]
                         </pre>
                 </ul>
-                <p>The last change will be to close the two <code>&lt;div&gt;</code> you previously opened. Here is the
+                <p>The last change will be to close the two <code>&lt;div&gt;</code> you previously opened, immediately after the closing <code>&lt;main&gt;</code> element. Here is the
                     full snippet of code:</p>
                 <pre>
 &lt;script&gt;
@@ -117,9 +206,6 @@ defTop.outerHTML = wet.builder.top({
 &lt;/script&gt;
 &lt;div class="container"&gt;
     &lt;div class="row"&gt;
-        &lt;main property="mainContentOfPage" typeof="WebPageElement" class="col-md-9 col-md-push-3"&gt;
-        ...
-        &lt;/main&gt;
         &lt;nav class="wb-sec col-md-3 col-md-pull-9" typeof="SiteNavigationElement" id="wb-sec"&gt;
             &lt;!-- Write closure fall-back static file --&gt;
             &lt;!-- secMenu-en.html --&gt;
@@ -210,6 +296,9 @@ defTop.outerHTML = wet.builder.top({
                 }]
             });
         &lt;/script&gt;
+        &lt;main property="mainContentOfPage" typeof="WebPageElement" class="col-md-9 col-md-push-3"&gt;
+        ...
+        &lt;/main&gt;
     &lt;/div&gt;
 &lt;/div&gt;
                     </pre>
@@ -226,96 +315,6 @@ defTop.outerHTML = wet.builder.top({
                     });
                 </script>
             </main>
-            <nav class="wb-sec col-md-3 col-md-pull-9" typeof="SiteNavigationElement" id="wb-sec">
-                <!-- Write closure fall-back static file -->
-                <!-- secMenu-en.html -->
-            </nav>
-            <!-- Write closure template -->
-            <script>
-                var secondarymenu = document.getElementById("wb-sec");
-                secondarymenu.innerHTML = wet.builder.secmenu({
-                    "sections": [{
-                        "sectionName": "[Topic - Local navigation]",
-                        "menuLinks": [{
-                            "href": "#",
-                            "text": "Link 1",
-                            "subLinks": [{
-                                "subhref": "#11a",
-                                "subtext": "Link 1.1 a)"
-                            }, {
-                                "subhref": "#11b",
-                                "subtext": "Link 1.1 b)"
-                            }, {
-                                "subhref": "#11c",
-                                "subtext": "Opens in a new window",
-                                "newWindow": true
-                            }, {
-                                "subhref": "#11d",
-                                "subtext": "Link 1.1 d)"
-                            }]
-                        }, {
-                            "href": "#",
-                            "text": "Link 2"
-                        }, {
-                            "href": "#",
-                            "text": "Opens in a new window",
-                            "newWindow": true
-                        }, {
-                            "href": "#",
-                            "text": "Link 4"
-                        }]
-                    }, {
-                        "sectionName": "Opens in a new window",
-                        "sectionLink": "#",
-                        "newWindow": true,
-                        "menuLinks": [{
-                            "href": "#",
-                            "text": "Link 1"
-                        }, {
-                            "href": "#",
-                            "text": "Link 2"
-                        }, {
-                            "href": "#",
-                            "text": "Link 3"
-                        }, {
-                            "href": "#",
-                            "text": "Link 4"
-                        }]
-                    }, {
-                        // Rinse and repeat
-                        "sectionName": "Section name 3",
-                        "menuLinks": [{
-                            "href": "#",
-                            "text": "Link 1"
-                        }, {
-                            "href": "#",
-                            "text": "Link 2"
-                        }, {
-                            "href": "#",
-                            "text": "Link 3"
-                        }, {
-                            "href": "#",
-                            "text": "Link 4"
-                        }]
-                    }, {
-                        // Rinse and repeat
-                        "sectionName": "Section name ... 27",
-                        "menuLinks": [{
-                            "href": "#",
-                            "text": "Link 1"
-                        }, {
-                            "href": "#",
-                            "text": "Link 2"
-                        }, {
-                            "href": "#",
-                            "text": "Link 3"
-                        }, {
-                            "href": "#",
-                            "text": "Link 4"
-                        }]
-                    }]
-                });
-            </script>
         </div>
     </div>
     <div id="def-footer">
